Fix share button color on iOS

--- a/src/css/share.css
+++ b/src/css/share.css
@@ -4,6 +4,7 @@ mg-share {
 }
 
 mg-share button {
+  color: inherit;
   font: inherit;
   appearance: none;
   padding: 0;
